--- a/package.json
+++ b/package.json
@@ -3,20 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.49",
     "@mui/material": "^5.0.2",
+    "@mui/x-data-grid": "^4.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.27",
-    "bootstrap": "^5.1.1",
+    "axios": "^0.22.0",
+    "date-fns": "^2.24.0",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.4.0",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.4",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "0.0.14",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
@@ -45,8 +60,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.27",
+    "@types/bootstrap": "^5.1.6",
+    "@types/react": "^17.0.29",
+    "@types/react-bootstrap": "^0.32.26",
+    "@types/react-csv": "^1.1.2",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.0"
+    "@types/react-router-dom": "^5.3.0",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^1.6.4"
   }
 }
